--- a/development/_includes/base.html
+++ b/development/_includes/base.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="generator" content="{{ eleventy.generator }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="{% if description %}{{ description }}{% else %}Eduardo's online journal, where I share articles about software engineering.{% endif %}">
     <title>{{ title }}</title>
