Page /shop & /shop/nunjucks-in-eleventy added.

--- a/development/_includes/components/navigation.html
+++ b/development/_includes/components/navigation.html
@@ -5,11 +5,12 @@
         <!-- <li>
             <a href="/about/" class="links-link {{'active-link' if '/about' in page.url}}">About</a>
         </li> -->
-        <!-- <li>
-            <a href="/contact/" class="links-link {{'active-link' if '/contact' in page.url}}">Resume</a>
-        </li> -->
+        
         <li>
             <a href="/journal/" class="links-link {{'active-link' if '/journal' in page.url}}">Journal</a>
+        </li>
+        <li>
+            <a href="/shop/" class="links-link {{'active-link' if '/shop' in page.url}}">Shop</a>
         </li>
     </ul>
 </nav>
