--- a/_includes/base.html
+++ b/_includes/base.html
@@ -1,25 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="generator" content="{{ eleventy.generator }}">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="generator" content="{{ eleventy.generator }}" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{ title }}</title>
-
     <style>
-    {% include "development/public/css/base.css" %}
+      html, body {
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            font-size: 16px;
+            height: 100vw;
+            margin: 0;
+            width: 100vw;
+      }
 
-    {% if css %}
-        {% for style in css %}
-            {% include "development/public/css/" + style %}
-        {% endfor %}
-    {% endif %} 
+      main {
+          padding: 1rem;
+          margin: 10rem auto;
+          width: 55ch;
+      }
+
+      h1 {
+          font-size: 1rem;
+          font-weight: 600;
+          line-height: 1.5;
+      }
+
+      p {
+          line-height: 1.5;
+          margin: 0;
+      }
+
+      /* When the reader highlights some text make the background black and the font color white. */
+      ::selection {
+          background: #1A1A1A;
+          color: #FFFFFF;
+      }
+
+      {% include "css/gray-syntax.css" %}
     </style>
-</head>
-
-<body>
-    {% block content %}
-        {{ content | safe }}
-    {% endblock content %}
-</body>
+  </head>
+  <body>
+    <main>{% block content %} {{ content | safe }} {% endblock content %}</main>
+  </body>
 </html>
