Update styles on journal entry.

--- a/_includes/base.html
+++ b/_includes/base.html
@@ -20,7 +20,7 @@
           width: 55ch;
       }
 
-      h1 {
+      h1, h2, h3 {
           font-size: 1rem;
           font-weight: 600;
           line-height: 1.5;
@@ -28,7 +28,7 @@
 
       p {
           line-height: 1.5;
-          margin: 0;
+          margin: 0 0 1rem;
       }
 
       /* When the reader highlights some text make the background black and the font color white. */
