Add a page for the Clerk, Stripe, and Next.js Ebook.

--- a/index.njk
+++ b/index.njk
@@ -78,7 +78,7 @@
         <li>
           <ul>
             <p>Ebooks</p>
-            <li><a href="/clerk-with-stripe">Clerk with Stripe</a></li>
+            <li><a href="/clerk-stripe-nextjs">Clerk, Stripe, and Next.js: A SaaS Subscription and Authentication Strategy</a></li>
             <li>
               <a href="https://eleventy.gumroad.com/l/reetue"
                 >Nunjucks in Eleventy</a
