--- a/index.njk
+++ b/index.njk
@@ -247,7 +247,9 @@
           <a href="/journal/">Journal</a>
         </li>
       </ul> -->
+      <div id="commento"></div>
     </main>
     <!-- <script src="/static-search.js"></script> -->
+    <script defer src="https://cdn.commento.io/js/commento.js"></script>
   </body>
 </html>
